--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"md5": "^2.3.0"
 	},
 	"devDependencies": {
+		"@types/md5": "^2.3.5",
 		"@types/node": "^22.1.0",
 		"typescript": "^5.5.4"
 	}
